--- a/style_with_notes.css
+++ b/style_with_notes.css
@@ -72,12 +72,11 @@
 #footer{/* note: div is display:block by default */
 	border:1px solid #e4e4e4;
 	background-color:#F1F1F1;
-	width:85em;
+	width:100%;
 	height:39.5px;
 	position:absolute;
 	bottom:0;
-	margin-left:auto;
-	margin-right:auto;
+	margin-left:-10px;
 	margin-bottom:0;
 	padding-bottom:0;
 }
@@ -126,17 +125,4 @@ a{
 
 a:visited{
 	color:#666;
-}
-
-a:hover{
-	text-decoration:underline;
-}
-
-#navbar_top a:hover{
-	color:black;
-	text-decoration:underline;
-}
-
-#fun_factoid > a{
-	color:blue;
 }
