Project completed. Created visual copy of Google's homepage. Moved images into separate 'images' directory.

--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
-#google_logo{ /* centering Google logo and sizing it depending on user screen size */
+#header{
 	display:block;
-	margin-left:auto;
-	margin-right:auto;
-	margin-top:10em;
-	height:6em;
-	width:17.235492em;
+	width:84em;
+	height:39.5px;
+	margin-left:-1em;
+	margin-right:-1em;
+	margin-top:-0.51em;
+	border:1px solid red;
+	position:absolute;
+	top:0;
 }
 
-.centering{ /* centering the 'Google Search' and 'I'm Feeling Lucky' buttons */
-	width:239px;
-	margin:auto;
-	margin-top:0.5em;
+#navbar_top{
+	display:inline-block;
 }
 
-#navbar_top > li{ /* takes list of navbar items and positions them horizontally */
+#navbar_top > li{ /* takes list of top navigation bar items and positions them inline horizontally */
 	display:inline-block;
 	color:#404040;
 	font:13px Arial, sans-serif;
@@ -21,7 +22,7 @@
 	margin-right:5.5px;
 	margin-top:-12px;	
 	position:relative;
-	left:72.65%;
+	left:72.5em;
 }
 
 #apps_icon{
@@ -38,6 +39,20 @@
 	top:10px;
 }
 
+#page_contents{
+	display:block;
+	width:84em;
+}
+
+#google_logo{ /* centering Google logo and sizing it depending on user screen size */
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:10em;
+	height:6em;
+	width:17.235492em;
+}
+
 #searchbox{
 	display:block;
 	margin-left:auto;
@@ -47,6 +62,13 @@
 	height:26px;
 	width:573px;
 	border:1px solid #CFCFCF;
+}
+
+
+.centering{ /* centering the 'Google Search' and 'I'm Feeling Lucky' buttons */
+	width:239px;
+	margin:auto;
+	margin-top:0.5em;
 }
 
 #button{
@@ -70,15 +92,15 @@
 }
 
 #footer{/* note: div is display:block by default */
+	display:block;
 	border:1px solid #e4e4e4;
 	background-color:#F1F1F1;
-	width:85em;
+	width:84em;
 	height:39.5px;
 	position:absolute;
 	bottom:0;
-	margin-left:auto;
-	margin-right:auto;
-	margin-bottom:0;
+	margin-left:-1em;
+	margin-right:-1em;
 	padding-bottom:0;
 }
 
