--- a/style.css
+++ b/style.css
@@ -1,62 +1,59 @@
 body{
 	margin:0;
 	padding:0;
-	height:100%;
 }
 
 #header{
 	display:block;
-	width:84em;
+	max-width:100%;
 	height:2.5em;
 	margin:auto;
-	top:0;
+	margin-top:0.25em;
 	padding-left:0.425em;
 	padding-right:0.425em;
+	padding-bottom:2em;
+	float:right;
 }
 
-#navbar_top{
-	display:inline-block;
-	position:absolute;
-	width:75%;
-}
-
-#navbar_top > li{ /* takes list of top navigation bar items and positions them inline horizontally */
+#header li{
 	display:inline-block;
 	color:#404040;
 	font:13px Arial, sans-serif;
 	margin-left:5.5px;
 	margin-right:5.5px;
 	margin-top:-12px;
-	position:relative;
-	left:75em;
+}
+
+#header > ul > li:nth-child(6){
+	margin-right:10px;
 }
 
 #apps_icon{
-	top:0.25em;
 	padding-left:0.75em;
 	padding-right:0.75em;
+	vertical-align:bottom;
 }
 
 #notifications_icon{
-	top:6px;
 	padding-right:0.5em;
+	vertical-align:bottom;
 }
 
 #profile_icon{
-	top:10px;
+	display:inline-block;
+	vertical-align:bottom;
 }
 
 #page_contents{
 	display:block;
-	width:84em;
-	margin:auto;
+	width:100%;
 	padding-top:0.85em;
 	padding-left:0.425em;
 	padding-right:0.425em;
 	position:absolute;
 }
 
-#google_logo{ /* centering Google logo and sizing it depending on user screen size */
+#google_logo{
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
@@ -77,20 +74,21 @@ body{
 	border:1px solid #CFCFCF;
 }
 
-#voice_icon{
-	display:inline-block;
-	z-index:1;
-	width:1em;
-	margin-left:58.5em;
-	margin-top:-1.5em;
-	opacity:0.625;
+/*voice_icon{
 	height:1.35em;
-}
+	width:1em;
+	display:inline-block;
+	margin-top:-0.75em;
+	opacity:0.625;
+	position:absolute;
+	margin-left:68%;
+	z-index:1;
+}*/
 
-.centering{ /* centering the 'Google Search' and 'I'm Feeling Lucky' buttons */
-	width:239px;
-	margin:auto;
+.centering{
+	max-width:100%;
 	margin-top:0.5em;
+	text-align:center;
 }
 
 #button{
@@ -113,9 +111,9 @@ body{
 	text-align:center;
 }
 
-#footer{/* note: div is display:block by default */
+#footer{
 	display:block;
-	border:1px solid #e4e4e4;
+	border=top:1px solid #e4e4e4;
 	background-color:#F1F1F1;
 	width:100%;
 	height:2em;
@@ -124,12 +122,13 @@ body{
 	padding-bottom:0.625em;
 	padding-right:0.425em;
 	padding-left:0.425em;
-	position:absolute;	
+	position:absolute;
 }
 
 #navbar_bottom_left{
 	display:inline-block;
 	margin-left:-12px;
+	float:left;
 }
 
 #navbar_bottom_left >li {
@@ -138,8 +137,8 @@ body{
 	font:13px Arial, sans-serif;
 	margin-left:15px;
 	margin-right:15px;
-	top:-4px;	
-	position:relative;
+	top:-4px;
+	vertical-align:middle;
 }
 
 #navbar_bottom_left >li:first-child{
@@ -148,6 +147,7 @@ body{
 
 #navbar_bottom_right{
 	display:inline-block;
+	float:right;
 }
 
 #navbar_bottom_right > li{
@@ -156,9 +156,9 @@ body{
 	font:13px Arial, sans-serif;
 	margin-left:15px;
 	margin-right:15px;
-	position:relative;
 	top:-4px;
 	left:62.5em;
+	vertical-align:middle;
 }
 
 #navbar_bottom_right > li:first-child{
@@ -185,5 +185,3 @@ a:hover{
 #fun_factoid > a{
 	color:blue;
 }
-
-/* update padding values for header/footer using em. */
